Some Backbone + JSON api

--- a/src/Backlog/AppBundle/Resources/views/Backlog/show.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/Backlog/show.html.twig
@@ -35,6 +35,5 @@
 {% endblock %}
 
 {% block body_javascript %}
-    <script src="{{ asset('backlogapp/js/app.js') }}"></script>
-    {% block content_javascript '' %}
+    <script type="text/javascript" src="{{ asset("bundles/backlogapp/js/backlog.js") }}"></script>
 {% endblock %}
