--- a/src/Backlog/AppBundle/Resources/views/_javascripts.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/_javascripts.html.twig
@@ -2,6 +2,7 @@
 <script type="text/javascript" src="{{ asset("bundles/backlogapp/jquery/jquery-ui-1.8.20.custom.min.js") }}"></script>
 
 <script type="text/javascript" src="{{ asset("bundles/backlogapp/bootstrap/js/bootstrap.js") }}"></script>
+<script type="text/javascript" src="{{ asset("bundles/backlogapp/twig/twig.js") }}"></script>
 
 <script type="text/javascript" src="{{ asset("bundles/backlogapp/backbone/underscore-1.3.3.js") }}"></script>
 <script type="text/javascript" src="{{ asset("bundles/backlogapp/backbone/json2.js") }}"></script>
