--- a/src/Backlog/AppBundle/Resources/views/Milestone/_row.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/Milestone/_row.html.twig
@@ -1,6 +1,6 @@
 {% extends "BacklogAppBundle:BacklogRow:_row.html.twig" %}
 
-{% block class 'bl-backlog-row-milestone' %}
+{% block class 'milestone' %}
 {% block icon  'icon-flag icon-white' %}
 
 {% block content %}
