Story, Markdown, Converter and form

--- a/src/Backlog/AppBundle/Resources/views/Story/_card.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/Story/_card.html.twig
@@ -17,5 +17,5 @@
         {% endif %}
     </dd>
     <dt>Description</dt>
-    <dd>Bla bla bla bla bla bla bla bla bla bla bla</dd>
+    <dd>{{ row.descriptionHtml | raw }}</dd>
 </dl>
