--- a/src/Backlog/AppBundle/Resources/views/BacklogRow/new.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/BacklogRow/new.html.twig
@@ -1,12 +1,15 @@
 {% extends "BacklogAppBundle:Backlog:layout.html.twig" %}
 
-{% block panel %}
+{% block breadcrumb %}
     {% include "BacklogAppBundle::_breadcrumbs.html.twig" with {
         'parts': [
-            {link: path('bl_backlog_list'), label: 'Home', panel: false},
+            {link: path('bl_backlog_list'), label: 'Backlogs', panel: false},
             {link: path('bl_backlog_show', {uid: row.backlog.uid}), label: row.backlog.title},
             {link: false, label: 'New'}
         ]
     } %}
+{% endblock %}
+
+{% block right %}
     {{ bl_row_new(row, form, type) }}
 {% endblock %}
