--- a/src/Backlog/AppBundle/Resources/views/Backlog/list.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/Backlog/list.html.twig
@@ -1,14 +1,34 @@
 {% extends "BacklogAppBundle::layout.html.twig" %}
 
 {% block content %}
-    <div class="page-header">
-        <h1>List of backlogs</h1>
-    </div>
+    {% include "BacklogAppBundle::_breadcrumbs.html.twig" with {
+        'parts': [
+            {link: null, label: 'Backlogs'},
+        ]
+    } %}
+
     {% for backlog in backlogs %}
-        <div class="well">
-            <h2>{{ backlog.title }}</h2>
-            <p><a href="{{ path('bl_backlog_show', {uid: backlog.uid}) }}">View</a></p>
-        </div>
+      <div class="well">
+        <h2>
+          <a href="{{ path('bl_backlog_show', {uid: backlog.uid}) }}">
+            {{ backlog.title }}
+          </a>
+          <small>
+            -
+            <a href="{{ path('bl_backlog_edit', {uid: backlog.uid}) }}">
+              Edit
+            </a>
+          </small>
+        </h2>
+      </div>
     {% endfor %}
-    <p><a class="btn btn-primary" href="{{ path('bl_backlog_new') }}"><i class="icon-plus icon-white"></i>Create a new backlog</a></p>
+
+    <div class="well">
+      <h2>
+        <a href="{{ path('bl_backlog_new') }}">
+          New...
+        </a>
+      </h2>
+    </div>
+
 {% endblock %}
