--- a/src/Backlog/AppBundle/Resources/views/Backlog/new.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/Backlog/new.html.twig
@@ -1,9 +1,12 @@
 {% extends "BacklogAppBundle::layout.html.twig" %}
 
 {% block content %}
-    <div class="page-header">
-        <h1>Create a new backlog</h1>
-    </div>
+    {% include "BacklogAppBundle::_breadcrumbs.html.twig" with {
+        'parts': [
+            {link: path('bl_backlog_list'), label: 'Backlogs'},
+            {link: null, label: 'New'},
+        ]
+    } %}
     <form action="{{ path('bl_backlog_new') }}" method="POST">
         {{ form_widget(form) }}
         <p><input type="submit" class="btn" value="Save" /></p>
