--- a/src/Backlog/AppBundle/Resources/views/Backlog/show.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/Backlog/show.html.twig
@@ -2,10 +2,10 @@
 
 {% block title backlog.title %}
 
-{% block panel %}
+{% block breadcrumb %}
     {% include "BacklogAppBundle::_breadcrumbs.html.twig" with {
         'parts': [
-            {link: path('bl_backlog_list'), label: 'Home'},
+            {link: path('bl_backlog_list'), label: 'Backlogs'},
             {link: false, label: backlog.title},
         ]
     } %}
