--- a/src/Backlog/AppBundle/Resources/views/BacklogRow/edit.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/BacklogRow/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends "BacklogAppBundle:Backlog:layout.html.twig" %}
 
-{% block panel %}
+{% block breadcrumb %}
     {% include "BacklogAppBundle::_breadcrumbs.html.twig" with {
         'parts': [
-            {link: path('bl_backlog_list'), label: 'Home', panel: false},
+            {link: path('bl_backlog_list'), label: 'Backlogs', panel: false},
             {link: path('bl_backlog_show', {uid: row.backlog.uid}), label: row.backlog.title},
             {link: path('bl_backlogrow_show', {backlog_uid: row.backlog.uid, id: row.id}), label: 'Row #' ~ row.id},
             {link: false, label: 'Edit'}
         ]
     } %}
+{% endblock %}
+
+{% block right %}
     {{ bl_row_edit(row, form) }}
 {% endblock %}
