--- a/src/Backlog/AppBundle/Resources/views/User/registerSuccess.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/User/registerSuccess.html.twig
@@ -3,6 +3,8 @@
 {% block title "You successfully registered" %}
 
 {% block content %}
-    <h1>Registration done!</h1>
+    <div class="page-header">
+        <h1>Registration done!</h1>
+    </div>
     <p>Go to your mails, you should find one from us!</p>
 {% endblock %}
