Add message comment action

--- a/src/Backlog/AppBundle/Resources/views/base.html.twig
+++ b/src/Backlog/AppBundle/Resources/views/base.html.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{% block title '' %}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     {% include "BacklogAppBundle::_stylesheets.html.twig" %}
 </head>
 <body class="{% block body_class '' %}">
