--- a/src/Backlog/BacklogBundle/Resources/views/Story/_card.html.twig
+++ b/src/Backlog/BacklogBundle/Resources/views/Story/_card.html.twig
@@ -1,8 +1,6 @@
-<div class="page-header">
-    <h2>#{{ row.id }}: {{ row.title }}</h2>
-</div>
-
 <dl>
+    <dt>Title</dt>
+    <dd>{{ row.title }}</dd>
     <dt>Complexity</dt>
     <dd>{{ row.complexity }}</dd>
     <dt>Assignee</dt>
