--- a/src/Backlog/BacklogBundle/Resources/views/Backlog/_toolbar.html.twig
+++ b/src/Backlog/BacklogBundle/Resources/views/Backlog/_toolbar.html.twig
@@ -25,7 +25,7 @@
             <li class="divider"></li>
             <li><a href="{{ path('bl_backlog_download', {uid: backlog.uid, format: 'json'}) }}">Download JSON</a></li>
             <li class="divider"></li>
-            <li><a href="{{ path('bl_backlog_edit', {uid: backlog.uid }) }}">Options</a></li>
+            <li><a href="{{ path('bl_backlog_edit', {uid: backlog.uid }) }}">Preferences</a></li>
         </ul>
     </div>
 </div>
